# sql-json-path

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: static.yml
src/: ast.rs  eval.rs  json.rs  lib.rs  main.rs  node.rs  parser.rs  query.rs
src/json/: jsonbb.rs  mod.rs  serde_json.rs  simd_json.rs
tests/: jsonb_jsonpath.out  jsonpath.rs  pg_jsonb_jsonpath.rs  pg_jsonpath.rs  postgres.rs
wasm/: Cargo.toml  Makefile
wasm/src/: lib.rs
wasm/www/: index.html  script.js  style.css
