[package]
name = "sql-json-path"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonbb = { version = "0.1.3", optional = true }
nom = "7"
regex = "1"
serde_json = "1"
simd-json = { version = "0.13", optional = true }
thiserror = "1"

[dev-dependencies]
libtest-mimic = "0.6"

[[test]]
name = "pg_jsonb_jsonpath"
path = "tests/pg_jsonb_jsonpath.rs"
harness = false
